08feb23-open issues fixed and new implementations done

--- a/suzuki/src/main/res/layout/dashboard_fragment_constraint_layout.xml
+++ b/suzuki/src/main/res/layout/dashboard_fragment_constraint_layout.xml
@@ -164,7 +164,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="4dp"
-            android:text="Odometer"
+            android:text="ODO meter"
             android:textColor="#aaaaaa"
             android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@id/rideCountStatic"
@@ -177,7 +177,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="4dp"
-            android:text="Total Ride Count"
+            android:text="Total Trips"
             android:textColor="#aaaaaa"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
