--- a/suzuki/src/main/res/layout/rider_profile_constraint_layout.xml
+++ b/suzuki/src/main/res/layout/rider_profile_constraint_layout.xml
@@ -215,7 +215,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:lineHeight="25sp"
-            android:text="Odometer "
+            android:text="ODO meter "
             android:textColor="#aaaaaa"
             android:textSize="12sp"
             app:layout_constraintWidth_percent="0.5"
@@ -234,7 +234,7 @@
             app:layout_constraintBottom_toTopOf="@+id/tvRide"
             android:gravity="center"
             android:lineHeight="25sp"
-            android:text="Total Ride Count"
+            android:text="Total Trips"
             android:textColor="#aaaaaa"
             app:layout_constraintVertical_chainStyle="packed"
             android:textSize="12sp" />
