--- a/suzuki/src/main/res/layout/settings_fragment.xml
+++ b/suzuki/src/main/res/layout/settings_fragment.xml
@@ -462,6 +462,7 @@
                         android:layout_marginEnd="10dp"
                         android:background="@drawable/gradient_grey"
                         android:text="Save All Trips"
+                         android:checked="true"
                         android:textColor="#ffff"
                         android:textSize="16sp"
                         android:theme="@style/SCBSwitch"
