--- a/suzuki/src/main/res/layout/dashboard_fragment_constraint_layout.xml
+++ b/suzuki/src/main/res/layout/dashboard_fragment_constraint_layout.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:visibility="visible"
+    android:id="@+id/constraintmain"
+
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,6 +11,7 @@
     android:layout_height="match_parent"
     android:background="@color/grey"
     android:animateLayoutChanges="true">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
