--- a/suzuki/src/main/res/layout/custom_dialog_for_savetrips.xml
+++ b/suzuki/src/main/res/layout/custom_dialog_for_savetrips.xml
@@ -70,7 +70,7 @@ delete the trips ?"
             android:gravity="center"
             android:lineSpacingExtra="7sp"
             android:padding="6dp"
-            android:text="Are you sure you want to delete the trips ?"
+            android:text="Are you sure you want to save this trip ?"
             android:textColor="#eeeeee"
             android:textSize="14sp"
             android:textStyle="normal" />
