--- a/suzuki/src/main/res/layout/introscreen_activity.xml
+++ b/suzuki/src/main/res/layout/introscreen_activity.xml
@@ -39,7 +39,7 @@
 
             <TextView
                 android:id="@+id/tvSkip"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:layout_weight="1"
@@ -49,7 +49,7 @@
 
             <TextView
                 android:id="@+id/tvNext"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginRight="30dp"
