--- a/suzuki/src/main/res/layout/trip_details_activity.xml
+++ b/suzuki/src/main/res/layout/trip_details_activity.xml
@@ -188,9 +188,82 @@
                 android:visibility="visible">
 
                 <LinearLayout
+                    android:id="@+id/ridetimelayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
+                    android:visibility="visible">
+
+                    <ImageView
+
+                        android:layout_width="37dp"
+                        android:layout_height="match_parent"
+                        android:layout_alignLeft="@+id/llBack"
+                        android:layout_gravity="top"
+                        android:padding="10dp"
+                        android:src="@drawable/tripss" />
+
+                    <LinearLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="left"
+                        android:layout_marginLeft="12dp"
+                        android:orientation="vertical"
+                        android:weightSum="4">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:gravity="center_vertical"
+                            android:text="Start Time"
+                            android:textColor="#b5b5b5"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:id="@+id/ridestarttime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="20dp"
+                            android:ellipsize="end"
+                            android:gravity="center_vertical"
+                            android:maxLines="1"
+                            android:text="- - - - "
+                            android:textColor="#e3e3e3"
+                            android:textSize="15sp" />
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:gravity="center_vertical"
+                            android:text="End Time"
+                            android:textColor="#b5b5b5"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:id="@+id/rideendtime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="60dp"
+                            android:layout_weight="2"
+                            android:ellipsize="end"
+                            android:gravity="center"
+                            android:maxLines="1"
+                            android:text="- - - - "
+                            android:textColor="@color/white"
+                            android:textSize="15sp" />
+                    </LinearLayout>
+
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_below="@id/ridetimelayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
                     android:visibility="visible">
 
                     <ImageView
@@ -216,7 +289,7 @@
                             android:gravity="center_vertical"
                             android:text="Start location"
                             android:textColor="#b5b5b5"
-                            android:textSize="10sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tvCurrentlocation"
@@ -238,7 +311,7 @@
                             android:gravity="center_vertical"
                             android:text="End location"
                             android:textColor="#b5b5b5"
-                            android:textSize="10sp" />
+                            android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/tvDestinationLoction"
@@ -269,7 +342,6 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="30dp"
                 android:gravity="center_vertical"
-
                 android:orientation="vertical">
 
 
@@ -277,9 +349,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-
-                    android:layout_marginBottom="10dp">
+                    android:layout_marginRight="20dp">
 
 
                     <TextView
@@ -317,70 +387,10 @@
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="10dp">
 
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:gravity="center"
-                        android:letterSpacing="0.09"
-                        android:lineSpacingExtra="0sp"
-                        android:text="Ride start time"
-                        android:textColor="#999999"
-                        android:textSize="15sp"
-                        android:textStyle="normal" />
-
-
-                    <TextView
-                        android:id="@+id/ridestarttime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="20dp"
-                        android:letterSpacing="0.09"
-                        android:lineSpacingExtra="0sp"
-                        android:text="- - - - "
-                        android:textColor="@color/app_theme_color"
-                        android:textSize="19sp"
-                        android:textStyle="normal" />
-
                 </RelativeLayout>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginBottom="10dp">
 
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:gravity="center"
-                        android:letterSpacing="0.09"
-                        android:lineSpacingExtra="0sp"
-                        android:text="Ride end time"
-                        android:textColor="#999999"
-                        android:textSize="15sp"
-                        android:textStyle="normal" />
-
-
-                    <TextView
-                        android:id="@+id/rideendtime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="20dp"
-                        android:letterSpacing="0.09"
-                        android:lineSpacingExtra="0sp"
-                        android:text="- - - - "
-                        android:textColor="@color/app_theme_color"
-                        android:textSize="19sp"
-                        android:textStyle="normal" />
-
-                </RelativeLayout>
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
