--- a/suzuki/src/main/res/layout/activity_faq_options.xml
+++ b/suzuki/src/main/res/layout/activity_faq_options.xml
@@ -208,7 +208,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/profile_settings"
+                    android:text="Profile"
                     android:textSize="16sp"
                     android:padding="4dp"
                     android:textColor="@color/black"
