--- a/suzuki/src/main/res/layout/last_parked_activity.xml
+++ b/suzuki/src/main/res/layout/last_parked_activity.xml
@@ -87,7 +87,7 @@
 
         android:layout_alignParentBottom="true"
         android:background="#212121"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <LinearLayout
             android:id="@+id/llHeaderNavDetails"
