--- a/suzuki/src/main/res/layout/custom_dialog_trips_desclaimer.xml
+++ b/suzuki/src/main/res/layout/custom_dialog_trips_desclaimer.xml
@@ -19,11 +19,13 @@
         android:layout_marginTop="15dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="15dp"
+        android:visibility="gone"
         android:background="@color/transaparent"
         android:src="@drawable/close" />
 
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -41,7 +43,7 @@
             android:layout_marginBottom="15dp"
             android:background="@color/transaparent"
             android:src="@drawable/warning"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <TextView
             android:layout_width="200dp"
@@ -58,30 +60,20 @@ delete the trips ?"
             android:textStyle="normal"
             android:visibility="gone" />
 
-        <EditText
+        <TextView
             android:id="@+id/etTripName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="35dp"
-            android:layout_marginRight="20dp"
             android:layout_marginBottom="15dp"
             android:background="@color/transaparent"
-            android:gravity="left"
-            android:hint="Please enter trip name!"
-            android:imeOptions="actionDone"
-            android:inputType="text"
-            android:focusableInTouchMode="true"
-            android:focusable="true"
-            android:lines="1"
-            android:maxLines="1"
-            android:maxLength="20"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:textCursorDrawable="@drawable/color_cursor"
-            android:textSize="14sp" />
-
+            android:gravity="center"
+            android:lineSpacingExtra="7sp"
+            android:padding="6dp"
+            android:text="Do you like to save the trip ?"
+            android:textColor="#eeeeee"
+            android:textSize="14sp"
+            android:textStyle="normal" />
 
         <LinearLayout
             android:id="@+id/llSave"
@@ -95,13 +87,12 @@ delete the trips ?"
 
 
             <TextView
-
                 android:id="@+id/tvCustomTextBtn"
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="28dp"
                 android:background="@color/white"
                 android:gravity="center"
-                android:text="Connect"
+                android:text="OK"
                 android:textColor="@color/blue"
                 android:textSize="15sp" />
 
