--- a/suzuki/src/main/res/layout/profile_activity.xml
+++ b/suzuki/src/main/res/layout/profile_activity.xml
@@ -40,7 +40,7 @@
             android:layout_weight="1.8"
             android:fontFamily="@font/roboto"
             android:gravity="center"
-            android:text="RIDER PROFILE"
+            android:text="EDIT PROFILE"
             android:textColor="#FFFF"
             android:textSize="16dp" />
 
