--- a/suzuki/src/main/res/layout/profile_activity_scroll_test.xml
+++ b/suzuki/src/main/res/layout/profile_activity_scroll_test.xml
@@ -46,7 +46,7 @@
                 android:layout_weight="1.8"
                 android:fontFamily="@font/roboto"
                 android:gravity="center"
-                android:text="RIDER PROFILE"
+                android:text="EDIT PROFILE"
                 android:textColor="#FFFF"
                 android:textSize="16dp" />
 
