--- a/suzuki/src/main/res/layout/recent_adapter.xml
+++ b/suzuki/src/main/res/layout/recent_adapter.xml
@@ -59,6 +59,30 @@
                 android:textColor="#fff"
                 android:textSize="12sp" />
 
+            <View
+                android:id="@+id/separator3"
+                android:layout_width="2dp"
+                android:layout_height="15dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:background="#404040" />
+
+
+            <TextView
+                android:id="@+id/trpName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/roboto"
+                android:gravity="center"
+                android:text="TRIP - HOME"
+                android:textColor="#fff"
+                android:textSize="12sp" />
+
+
 
         </LinearLayout>
 
@@ -182,8 +206,8 @@
                         <CheckBox
                             android:id="@+id/cbCustomMsgCheck"
 
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
                             android:background="@drawable/checkbox_layout"
                             android:button="@null"
                             android:visibility="visible" />
