--- a/suzuki/src/main/res/layout/trip_details_activity.xml
+++ b/suzuki/src/main/res/layout/trip_details_activity.xml
@@ -469,6 +469,43 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="10dp">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+
+                        android:letterSpacing="0.09"
+                        android:lineSpacingExtra="0sp"
+                        android:text="Vehicle Type"
+                        android:textColor="#999999"
+                        android:textSize="15sp"
+                        android:textStyle="normal" />
+
+
+                    <TextView
+                        android:id="@+id/tvVehicleType"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="20dp"
+
+                        android:letterSpacing="0.09"
+                        android:lineSpacingExtra="0sp"
+                        android:text="- - - - "
+                        android:textColor="@color/app_theme_color"
+                        android:textSize="16sp"
+                        android:textStyle="normal" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
                     android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
