--- a/suzuki/src/main/res/layout/custom_marker_layout.xml
+++ b/suzuki/src/main/res/layout/custom_marker_layout.xml
@@ -1,35 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.mappls.sdk.maps.annotations.BubbleLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:orientation="vertical"
-    android:paddingBottom="6dp"
-    android:paddingEnd="8dp"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp"
-    android:paddingStart="8dp"
-    app:mappls_maps_bl_arrowDirection="bottom"
-    app:mappls_maps_bl_arrowHeight="8dp"
-    app:mappls_maps_bl_arrowWidth="8dp"
-    app:mappls_maps_bl_arrowPosition="50dp"
-    app:mappls_maps_bl_bubbleColor="@color/marker_color"
-    app:mappls_maps_bl_cornersRadius="6dp"
-    app:mappls_maps_bl_strokeColor="@android:color/darker_gray"
-    app:mappls_maps_bl_strokeWidth="1dp">
+    android:id="@+id/llFeedbackWindow"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:background="#000"
+    android:orientation="horizontal">
+</LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_waypoint_count"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:text="1"
-        android:background="@color/marker_color"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        />
+<!--<com.mappls.sdk.maps.annotations.BubbleLayout-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:layout_width="40dp"-->
+<!--    android:layout_height="40dp"-->
+<!--    android:orientation="vertical"-->
+<!--    android:paddingBottom="6dp"-->
+<!--    android:paddingEnd="8dp"-->
+<!--    android:paddingLeft="8dp"-->
+<!--    android:paddingRight="8dp"-->
+<!--    android:paddingStart="8dp"-->
+<!--    app:mappls_maps_bl_arrowDirection="bottom"-->
+<!--    app:mappls_maps_bl_arrowHeight="8dp"-->
+<!--    app:mappls_maps_bl_arrowWidth="8dp"-->
+<!--    app:mappls_maps_bl_arrowPosition="50dp"-->
+<!--    app:mappls_maps_bl_bubbleColor="@color/marker_color"-->
+<!--    app:mappls_maps_bl_cornersRadius="6dp"-->
+<!--    app:mappls_maps_bl_strokeColor="@android:color/darker_gray"-->
+<!--    app:mappls_maps_bl_strokeWidth="1dp">-->
 
-</com.mappls.sdk.maps.annotations.BubbleLayout>
+<!--    <TextView-->
+<!--        android:id="@+id/tv_waypoint_count"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:text="1"-->
+<!--        android:background="@color/marker_color"-->
+<!--        android:textSize="18sp"-->
+<!--        android:textStyle="bold"-->
+<!--        android:textAlignment="center"-->
+<!--        />-->
+
+<!--</com.mappls.sdk.maps.annotations.BubbleLayout>-->
